<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Погода</string>
    <string name="change_city">Изменить город</string>
    <string name="enter_zip_code">Вы можете изменить город, указав название города или почтовый индекс</string>
    <string name="can_not_find">Не удается найти город</string>
    <string name="location">Местоположение</string>
    <string name="search">Поиск</string>
    <string name="toggle_values">Переключить значения</string>

    <string name="first_go_button">Поиск</string>
    <string name="database_error">Похоже, что город, который вы ввели, не существует в базе данных. Пожалуйста, попробуйте снова</string>
    <string name="pick_city">Выбор города</string>
    <string name="condition">%s в данный момент</string>
    <string name="refresh">Обновить</string>

    <string name="speed">Ветер : %.2f</string>
    <string name="mps">м/с</string>
    <string name="mph">мил/ч</string>
    <string name="hPa">гПа</string>
    <string name="mm">мм</string>
    <string name="rain_">Дождь : %.2f</string>
    <string name="snow_">Снег : %.2f</string>
    <string name="humidity">Влажность : %d %%</string>
    <string name="pressure">Давление : %.2f гПа</string>
    <string name="temperature">Температура : %1$.2f %2$s</string>
    <string name="city">Город : %s</string>

    <string name="wind" formatted="false">%1$.2f %2$s</string>
    <string name="wind_speed">Скорость ветра : %1$.2f %2$s</string>
    <string name="wind_">Ветер : %1$.2f %2$s</string>
    <string name="humidity_">%d %%</string>
    <string name="sunrise">Восход солнца : %s</string>
    <string name="sunset">Закат солнца : %s</string>

    <string name="north">Северный ветер</string>
    <string name="north_east">Северо-восточный ветер</string>
    <string name="north_west">Северо-западный ветер</string>
    <string name="south">Южный ветер</string>
    <string name="south_east">Юго-восточный ветер</string>
    <string name="south_west">Юго-западный ветер</string>
    <string name="east">Восточный ветер</string>
    <string name="west">Западный ветер</string>

    <string name="humidity_icon">&#xf07a;</string>
    <string name="pressure_icon">&#xf079;</string>
    <string name="speed_icon">&#xf050;</string>
    <string name="day_icon">&#xf00d;</string>
    <string name="night_icon">&#xf0ae;</string>
    <string name="sunrise_icon">&#xf051;</string>
    <string name="sunset_icon">&#xf052;</string>

    <string name="top_right">&#xf057;</string>
    <string name="right">&#xf04d;</string>
    <string name="bottom_right">&#xf088;</string>
    <string name="down">&#xf044;</string>
    <string name="bottom_left">&#xf043;</string>
    <string name="left">&#xf048;</string>
    <string name="top_left">&#xf087;</string>
    <string name="top">&#xf058;</string>

    <string name="weather_sunny">&#xf00d;</string>
    <string name="weather_sunny_cloudy">&#xf002;</string>
    <string name="weather_clear_night">&#xf02e;</string>
    <string name="thunderstorm_with_light_rain">&#xf01d;</string>
    <string name="weather_foggy">&#xf014;</string>
    <string name="weather_cloudy">&#xf013;</string>
    <string name="weather_rainy">&#xf019;</string>
    <string name="weather_heavy_drizzle">&#xf015;</string>
    <string name="weather_snowy">&#xf01b;</string>
    <string name="weather_thunder">&#xf01e;</string>
    <string name="weather_drizzle">&#xf01a;</string>
    <string name="weather_rain_wind">&#xf018;</string>
    <string name="weather_rain_drizzle">&#xf017;</string>
    <string name="weather_heavy_snow">&#xf076;</string>
    <string name="weather_shower_rain">&#xf01a;</string>
    <string name="weather_sleet">&#xf0b5;</string>
    <string name="weather_smoke">&#xf062;</string>
    <string name="weather_dust">&#xf063;</string>
    <string name="weather_storm">&#xf0ce;</string>
    <string name="weather_hurricane">&#xf0cf;</string>
    <string name="weather_volcano">&#xf0c8;</string>
    <string name="weather_tornado">&#xf056;</string>
    <string name="thunderstorm">&#xf01e;</string>
    <string name="lightning">&#xf016;</string>
    <string name="sprinkle">&#xf01c;</string>
    <string name="rain">&#xf019;</string>
    <string name="rain_wind">&#xf018;</string>
    <string name="rain_mix">&#xf017;</string>
    <string name="showers">&#xf01a;</string>
    <string name="storm_showers">&#xf01d;</string>
    <string name="snow">&#xf01b;</string>
    <string name="sleet">&#xf0b5;</string>
    <string name="smoke">&#xf062;</string>
    <string name="haze">&#xf0b6;</string>
    <string name="dust">&#xf063;</string>
    <string name="volcano">&#xf0c8;</string>
    <string name="fog">&#xf014;</string>
    <string name="cloudy_gusts">&#xf011;</string>
    <string name="tornado">&#xf056;</string>
    <string name="cloudy">&#xf013;</string>
    <string name="hurricane">&#xf073;</string>
    <string name="snowflake_cold">&#xf076;</string>
    <string name="hot">&#xf072;</string>
    <string name="windy">&#xf021;</string>
    <string name="hail">&#xf015;</string>
    <string name="strong_wind">&#xf050;</string>

    <!--Day Icons-->
    <string name="day_clear">&#xf00d;</string>
    <string name="day_cloudy">&#xf002;</string>
    <string name="day_rainy">&#xf008;</string>
    <string name="day_heavy_drizzle">&#xf004;</string>
    <string name="day_snowy">&#xf00a;</string>
    <string name="day_thunder">&#xf01e;</string>
    <string name="day_drizzle">&#xf009;</string>
    <string name="day_rain_wind">&#xf007;</string>
    <string name="day_rain_drizzle">&#xf006;</string>

    <!-- Night Icons -->
    <string name="night_clear">&#xf02e;</string>
    <string name="night_cloudy">&#xf086;</string>
    <string name="night_rainy">&#xf028;</string>
    <string name="night_heavy_drizzle">&#xf024;</string>
    <string name="night_snowy">&#xf02a;</string>
    <string name="night_thunder">&#xf02d;</string>
    <string name="night_drizzle">&#xf029;</string>
    <string name="night_rain_wind">&#xf027;</string>
    <string name="night_rain_drizzle">&#xf026;</string>

    <string name="place_not_found">Sorry, no weather data found.</string>

    <string name="go">GO</string>
    <string name="cancel">@android:string/cancel</string>

    <string name="enter_city_first">Введите имя города</string>
    <string name="check_internet">Пожалуйста, проверьте подключение к интернету</string>
    <string name="please_wait">Пожалуйста, подождите</string>
    <string name="loading">Загрузка</string>

    <string name="c">°C</string>
    <string name="f">°F</string>
    <string name="daily">Посуточный</string>

    <string name="title_activity_first_launch">Введите город</string>

    <!-- Drawer Strings -->
    <string name="drawer_item_home">Главный экран</string>
    <string name="drawer_item_graph">Графики погоды</string>
    <string name="drawer_item_map">Карта погоды</string>
    <string name="drawer_item_about">О программе</string>
    <string name="drawer_item_notifications">Почасовые уведомления</string>
    <string name="drawer_item_fahrenheit">Фаренгейт</string>
    <string name="drawer_version_header">Version</string>

    <string name="morning">Утро</string>
    <string name="night">Ночь</string>
    <string name="day">День</string>
    <string name="evening">Вечер</string>

    <!-- Target Strings -->
    <string name="target_search_title">Поиск города</string>
    <string name="target_search_content">Поиск данных о погоде более чем 200 000 городов и поселков</string>
    <string name="target_location_title">Поиск данных вашего местоположения</string>
    <string name="target_location_content">Нажмите, чтобы проверить погоду. Проведите пальцем по левому краю экрана вправо, чтобы увидеть больше параметров.</string>
    <string name="target_refresh_title">Обновить</string>
    <string name="target_refresh_content">Проведите пальцем вверх, чтобы обновить</string>

    <string name="no_internet_title">Без интернета</string>
    <string name="no_internet_content">Требуется доступ к Интернету для отображения данных о погоде</string>
    <string name="no_internet_mobile_data">Мобильные данные</string>
    <string name="no_internet_wifi">Wi-Fi</string>

    <!-- Widgets Strings -->
    <string name="widget_weather_icon_description">Значок текущей погоды</string>
    <string name="widget_refresh_button">Кнопка обновления виджета</string>

    <!-- Bottom Bar Strings -->
    <string name="bottom_rain">Дождь</string>
    <string name="bottom_wind">Ветер</string>
    <string name="bottom_temperature">Температура</string>

    <!-- Graph Strings -->
    <string name="g_rain">Дождь, мм</string>
    <string name="g_pressure">Давление, гПа</string>
    <string name="g_snow">Снег, мм</string>
    <string name="g_temp">Температура, %s</string>
    <string name="g_wind">Ветер, %s</string>

    <!-- Days -->
    <string name="sunday">Вс</string>
    <string name="mon">Пн</string>
    <string name="tue">Вт</string>
    <string name="wed">Ср</string>
    <string name="thu">Чт</string>
    <string name="fri">Пт</string>
    <string name="sat">Сб</string>

    <!-- About -->
    <string name="title_activity_about">О программе</string>
    <string name="author_header">Автор</string>
    <string name="site_title">Сайт</string>
    <string name="license_header">Лицензия</string>
    <string name="dev_1_title">Alexander Plyaka</string>
    <string name="dev_1_name">\@AlexanderPlyaka</string>
    <string name="dev_2_title">OpenWeatherMap</string>
    <string name="dev_2_name">OpenWeatherMap Inc.</string>
    <string name="dev_2_link">https://openweathermap.org/</string>
    <string name="app_license">Лицензия на приложение</string>
    <string name="app_license_value">GNU GPL v3</string>

    <string name="license_link">https://www.gnu.org/licenses/gpl-3.0.txt</string>

    <string name="github_link">https://github.com/AlexanderPlyaka</string>

    <string name="enter_city_hint">Введите название города</string>

    <string name="choose_app">Выберите приложение</string>
</resources>