<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="4dp"
        android:paddingBottom="4dp"
        android:text="@string/site_title"
        android:textColor="@color/red"
        android:textSize="@dimen/font_normal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="@dimen/margin_normal"
        android:paddingBottom="@dimen/margin_normal"
        android:background="?android:attr/selectableItemBackground"
        android:id="@+id/credits" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_2_title"
            android:textColor="@color/card_text_primary"
            android:textSize="@dimen/font_normal"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dev_2_name"
            android:textSize="@dimen/font_normal"/>

    </LinearLayout>

</LinearLayout>